syntax = "proto3";

package orderitems;


option go_package = "genprotos/";

import "product.proto";

service OrderItemService {
    rpc CreateOrderItem (OrderItem) returns (OrderItem);
    rpc GetOrderItem (OrderItemIdRequest) returns (OrderItem);
    rpc UpdateOrderItem (OrderItem) returns (OrderItem);
    rpc DeleteOrderItem (OrderItemIdRequest) returns (Empty);
    rpc ListOrderItems (ListRequest) returns (OrderItemListResponse);
}


message AddItemsRequest{
    string id = 1;
    string user_id = 2;
    string product_id= 3;
   
}


message AddItemsResponse{
    double total_price =1;
    repeated CreateProductRequest products = 2;
    int32 quantity = 3;
}

